# memkind

./: BUILD.bazel  Makefile.am  WORKSPACE
include/: BUILD.bazel
include/memkind/internal/: fast_slab_allocator.h  ranking.h  ranking_internals.hpp
src/: BUILD.bazel  bigary.c  fast_pool_allocator.c  fast_slab_allocator.c  mtt_allocator.c  mtt_internals.c  pagesizes.c  ranking.cpp  ranking_internals.cpp  slab_allocator.c  slab_tracker.cpp
test/: memkind_memtier_data_movement_test.cpp
tiering/: memtier.c
