load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

package(default_visibility = ["//visibility:public"])

licenses(["restricted"])  # GNU General Public License ("GPL") version 2

filegroup(
  name = "all_files",
#  srcs = [
#     "//src:srcs",
#     "autogen.sh",
#    "//:**"
#  ],
    #srcs = glob(["**"]),
    srcs = glob([
        "src/*",
    ]),
)

configure_make(
    name = "memkind",
    lib_source = "//:all_files",
    out_static_libs = ["memkind.a"],
    autogen = True,
    configure_in_place = True,
    configure_options = ["-q"],
)
